pkg/lang/testdata/ub/config/invalid/state-quoted-body-key.ub
state: { @backend: local, 'path': '.unobin/state' }
